# smoker-status

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 0.0.1-Septentrion-LogisticRegression-Exploration.ipynb  0.01-250mhz-random-forest-exploration.ipynb  0.01-Josephc0-decision-tree-exploration.ipynb  0.01-saulc-data-exploration.ipynb  0.02-250mhz-feature-extraction-exploration.ipynb  0.03-250mhz-clustering-exploration.ipynb  0.03-combinations.ipynb  0.04-250mhz-clustering-compare.ipynb  0.05-250mhz-fix-mistakes.ipynb
smoker_status/: __init__.py  config.py  features.py  util.py
